<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.education.hybris.workshop</groupId>
  <artifactId>EntranceTask</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <properties>
	  <spring.version>5.3.9</spring.version>
	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>17</java.version>
  </properties>
  
  <dependencies>
	<dependency>		
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.7.2</version>
	    <scope>test</scope>
	</dependency>

	<dependency>
	    <groupId>org.hibernate.orm</groupId>
	    <artifactId>hibernate-core</artifactId>
	    <version>6.0.0.Alpha9</version>
	</dependency>
	
	<dependency>
	    <groupId>org.hibernate.orm</groupId>
	    <artifactId>hibernate-entitymanager</artifactId>
	    <version>6.0.0.Alpha7</version>
	</dependency>
	
	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.26</version>
	</dependency>
	
	<dependency>
	    <groupId>javax.annotation</groupId>
	    <artifactId>javax.annotation-api</artifactId>
	    <version>1.3.2</version>
	</dependency>
	
  </dependencies>

  <build>
	  <plugins>	  
		  <plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.8.1</version>
			  <configuration>
				<release>${java.version}</release>
                <compilerArgs>--enable-preview</compilerArgs>
			  	<source>${java.version}</source>
			  	<target>${java.version}</target>
	           </configuration>
		  </plugin>
		  
	  </plugins>  
    </build>
  
</project>